manifests/k8srequireprobes/base/requireprobes-violations.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredProbes
metadata:
  name: must-have-probes-violation
status:
  totalViolations: 0
